# Bitshuffle.PInvoke

./: .appveyor.yml  .gitmodules  3rd-party-licenses.md  Bitshuffle.PInvoke.sln  CMakeLists.txt  Directory.Build.props  README.md  add-missing-typedef.patch  exports.def  init_solution.ps1
src/Bitshuffle.PInvoke/: Bitshuffle.PInvoke.csproj  Bitshuffle.PInvoke.targets  Bitshuffle.cs  Constants.cs
tests/Bitshuffle.PInvoke.Tests/: Bitshuffle.PInvoke.Tests.csproj  PInvokeFixture.cs  PInvokeTests.cs
